[package]
name = "ctf-pwn"
version = "0.1.0"
edition = "2021"
authors = ["Jovan Pavlovic"]
description = "Pwn utilities for Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
pin-project-lite = "0.2.13"
pin-utils = "0.1.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
