[package]
name = "ctf-pwn"
version = "0.3.0"
edition = "2021"
authors = ["Jovan Pavlovic"]
description = "Pwn utilities for Rust."
license = "MIT"
homepage = "https://github.com/rust-ctf/ctf-pwn"
repository = "https://github.com/rust-ctf/ctf-pwn"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
crossterm = { version = "0.27.0", features = ["bracketed-paste"] }
kmp = "0.1.1"
paste = "1.0.14"
pin-project-lite = "0.2.13"
pin-utils = "0.1.0"
regex = { version = "1.10.2", features = [] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.20"
hex = "0.4.3"
