[package]
name = "ctf-pwn-macro"
version = "0.1.0"
edition = "2021"
authors = ["Jovan Pavlovic"]
description = "Macro helper for pwn"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = { version = "1.18.0", features = ["code_asm"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
